Update config DP

--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -8,5 +8,8 @@
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Services\Services.csproj" />
+  </ItemGroup>
   
 </Project>
