feat: Get List Customer, base Login

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -5,9 +5,8 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "ConnectionStrings": {
-        //server=(local);database=#DB_NAME;uid=sa;pwd=12345;TrustServerCertificate=True
-        "DefaultConnectionStringDB": ""
-    },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=(local);Uid=sa;Pwd=12345;Database=PetHealthCare;TrustServerCertificate=True"
+  },
     "AllowedHosts": "*"
 }
