--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\DataAccessLayers\DataAccessLayers.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Class\" />
+    <Folder Include="Interface\" />
+  </ItemGroup>
+
 </Project>
