--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -6,6 +6,7 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.31" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.29" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.29" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.29">
