--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,12 +1,19 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnectionString": "Server=(local);Uid=sa;Pwd=12345;Database=PetHealthCare;TrustServerCertificate=True"
   },
-    "AllowedHosts": "*"
+  "JWT": {
+    "Audience": "http://localhost:5096",
+    "Issuer": "http://localhost:5167",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr",
+    "AccessTokenExpiration": 60,
+    "RefreshTokenExpiration": 60
+  },
+  "AllowedHosts": "*"
 }
