feature: update api Odata, api create service for doctor

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,19 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "ConnectionStrings": {
-    "DefaultConnectionString": "Server=(local);Uid=sa;Pwd=12345;Database=PetHealthCare;TrustServerCertificate=True"
-  },
-  "JWT": {
-    "Audience": "http://localhost:5096",
-    "Issuer": "http://localhost:5167",
-    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr",
-    "AccessTokenExpiration": 60,
-    "RefreshTokenExpiration": 60
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnectionString": "Server=(local);Uid=sa;Pwd=12345;Database=PetHealthCare;TrustServerCertificate=True"
+    },
+    "OdataSettings": {
+        "BaseUrl": "https://localhost:5001/odata",
+        "PetEndpoint": "/Pet",
+        "DoctorEndpoint": "/Doctor",
+        "ServiceEndpoint": "/Service",
+        "BookingEndpoint": "/Booking",
+        "UserEndpoint": "/Customer"
+    },
+    "JWT": {
+        "Audience": "http://localhost:5096",
+        "Issuer": "http://localhost:5167",
+        "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr",
+        "AccessTokenExpiration": 60,
+        "RefreshTokenExpiration": 60
+    },
+    "AllowedHosts": "*"
 }
