--- a/Presentation/Presentation - Backup.csproj
+++ b/Presentation/Presentation - Backup.csproj
@@ -16,6 +16,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
 	</ItemGroup>
 	
 	<ItemGroup>
