--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -7,6 +7,7 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.31" />
+		<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.29" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.29" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.29">
