feature: update api Odata for doctor

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -14,7 +14,8 @@
         "DoctorEndpoint": "/Doctor",
         "ServiceEndpoint": "/Service",
         "BookingEndpoint": "/Booking",
-        "UserEndpoint": "/Customer"
+        "UserEndpoint": "/Customer",
+        "ScheduleEndpoint": "/Schedule"
     },
     "JWT": {
         "Audience": "http://localhost:5096",
