feature: update Odata for staff

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -15,6 +15,7 @@
         "ServiceEndpoint": "/Service",
         "BookingEndpoint": "/Booking",
         "UserEndpoint": "/Customer",
+        "StaffEndpoint": "/Staff",
         "ScheduleEndpoint": "/Schedule"
     },
     "JWT": {
