feature: update database transaction and handle get transaction

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -8,15 +8,17 @@
   "ConnectionStrings": {
     "DefaultConnectionString": "Server=(local);Uid=sa;Pwd=12345;Database=PetHealthCare;TrustServerCertificate=True"
   },
-  "OdataSettings": {
-    "BaseUrl": "https://localhost:5001/odata",
-    "PetEndpoint": "/Pet",
-    "DoctorEndpoint": "/Doctor",
-    "ServiceEndpoint": "/Service",
-    "BookingEndpoint": "/Booking",
-    "UserEndpoint": "/Customer",
-    "ScheduleEndpoint": "/Schedule"
-  },
+    "OdataSettings": {
+        "BaseUrl": "https://localhost:5001/odata",
+        "PetEndpoint": "/Pet",
+        "DoctorEndpoint": "/Doctor",
+        "ServiceEndpoint": "/Service",
+        "BookingEndpoint": "/Booking",
+        "UserEndpoint": "/Customer",
+        "ScheduleEndpoint": "/Schedule",
+        "TransactionEndpoint": "/Transaction"
+
+    },
   "JWT": {
     "Audience": "http://localhost:5096",
     "Issuer": "http://localhost:5167",
