fixbug: cannot get odata for staff

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -16,6 +16,7 @@
         "BookingEndpoint": "/Booking",
         "UserEndpoint": "/Customer",
         "ScheduleEndpoint": "/Schedule",
+        "StaffEndpoint": "/Staff",
         "TransactionEndpoint": "/Transaction"
 
     },
