feature: handle odata for customer

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -14,7 +14,7 @@
         "DoctorEndpoint": "/Doctor",
         "ServiceEndpoint": "/Service",
         "BookingEndpoint": "/Booking",
-        "UserEndpoint": "/Customer",
+        "CustomerEndpoint": "/Customer",
         "ScheduleEndpoint": "/Schedule",
         "StaffEndpoint": "/Staff",
         "TransactionEndpoint": "/Transaction"
