feat: CRUD medical Record

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -17,7 +17,8 @@
         "CustomerEndpoint": "/Customer",
         "ScheduleEndpoint": "/Schedule",
         "StaffEndpoint": "/Staff",
-        "TransactionEndpoint": "/Transaction"
+      "TransactionEndpoint": "/Transaction",
+        "MedicalRecordEndpoint": "/MedicalRecord"
 
     },
   "JWT": {
